--- a/includes/main.css
+++ b/includes/main.css
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5,h6 {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #ff5c5f;
+  color: #ffffff;
   background-color: #2d2bc0;
 }
 .navbar-default .navbar-nav > .open > a,
